# learn_solana_rust_program

./: Cargo.toml  README.md  new_keypair.json
src/: client_test.rs  lib.rs
